@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>python</herd>
-	<maintainer>
-		<email>hawking@gentoo.org</email>
-		<name>Ali Polatel</name>
-	</maintainer>
-	<maintainer>
-		<email>pva@gentoo.org</email>
-		<name>Peter Volkov</name>
-	</maintainer>
-	<maintainer>
-		<email>fauli@gentoo.org</email>
-		<name>Christian Faulhammer</name>
-	</maintainer>
+  <herd>python</herd>
+  <maintainer>
+    <email>pva@gentoo.org</email>
+    <name>Peter Volkov</name>
+  </maintainer>
+  <maintainer>
+    <email>fauli@gentoo.org</email>
+    <name>Christian Faulhammer</name>
+  </maintainer>
 </pkgmetadata>
